# aoc2023

./: .gitignore  Cargo.toml  machines.gv
doctest-output/: machines.gv
prob01/: Cargo.toml
prob01/src/: main.rs
prob02/: Cargo.toml
prob02/src/: main.rs
prob03/: Cargo.toml
prob03/src/: main.rs
prob04/: Cargo.toml
prob04/src/: main.rs
prob05/: Cargo.toml
prob05/src/: main.rs
prob06/: Cargo.toml
prob06/src/: main.rs
prob07/: Cargo.toml
prob07/src/: main.rs
prob08/: Cargo.toml
prob08/src/: main.rs
prob09/: Cargo.toml
prob09/src/: main.rs
prob10/: Cargo.toml
prob10/src/: main.rs
prob11/: Cargo.toml
prob11/src/: main.rs
prob12/src/: main.rs
prob13/: Cargo.toml
prob13/src/: main.rs
prob14/: Cargo.toml
prob14/src/: main.rs
prob15/: Cargo.toml
prob15/src/: main.rs
prob16/src/: main.rs
prob17/: Cargo.toml
prob17/src/: main.rs
prob18/: Cargo.toml
prob18/src/: main.rs
prob19/: Cargo.toml
prob19/src/: main.rs
prob20/: Cargo.toml
prob20/src/: main.rs
prob21/: Cargo.toml
prob21/src/: main.rs
prob22/: Cargo.toml
prob22/src/: main.rs
prob23/: Cargo.toml
prob23/src/: main.rs
prob24/: Cargo.toml
prob24/src/: day24.py  main.rs
prob25/: Cargo.toml
prob25/src/: day25.ipynb  machines_test.gv  machines_test_num.gv  main.rs
src/: main.rs
utils/src/: lib.rs
