

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = ["prob01", "prob02", "prob03", "prob04", "prob05", "prob06", "prob07", "prob08", "prob09", "prob10", "prob11", "prob12", "prob13", "prob14", "prob15", "prob16", "prob17", "prob18", "prob19", "prob20", "prob21", "prob22", "prob23", "prob24", "prob25", "utils"]
resolver = "2"
